# emenu

./: README.md  pyproject.toml
apps/dishes/: admin.py  filters.py  models.py  serializers.py  views.py
apps/dishes/migrations/: 0001_initial.py
apps/dishes/tests/: factories.py  test_views.py
apps/users/: admin.py  apps.py  models.py
apps/users/migrations/: 0001_initial.py
emenu/: asgi.py  settings.py  urls.py  wsgi.py
utils/: models.py
